[package]
name = "orca-config-api-parser"
version = "0.1.0"
edition = "2021"
authors = ["Tulip Protocol"]
description = "helper functions for parsing the output of Orca's configuration api"
keywords = ["solana", "orca"]
license = "MIT/Apache-2.0"
[dependencies]
thiserror = "1.0.25"
anyhow = "1.0.41"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.8.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1 